[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/encounters/Encounter.gd" type="Script" id=1]
[ext_resource path="res://src/Encounter_Player/Encounter_Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/DiceRoller/Dices.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/Knight_Idle.png" type="Texture" id=4]
[ext_resource path="res://art/Combat_Platform.png" type="Texture" id=5]
[ext_resource path="res://src/encounter_enemy/Encounter_Enemy.gd" type="Script" id=6]
[ext_resource path="res://art/Placeholders/enemy_hand_placeholder.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="FightEncounter" type="Node2D"]
script = ExtResource( 1 )

[node name="RollButton" type="Button" parent="."]
visible = false
margin_left = 224.0
margin_top = 288.0
margin_right = 288.0
margin_bottom = 320.0
text = "ROLL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurnButton" type="Button" parent="."]
visible = false
margin_left = 224.0
margin_right = 289.0
margin_bottom = 32.0
text = "End turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Encounter_Player" type="Node2D" parent="."]
position = Vector2( 416, 160 )
script = ExtResource( 2 )

[node name="Combat_Platform" type="Sprite" parent="Encounter_Player"]
position = Vector2( -32, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="PlayerSprite" type="Sprite" parent="Encounter_Player"]
position = Vector2( -32, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
offset = Vector2( 128, 0 )
hframes = 4
frame = 2

[node name="Skills" type="Node2D" parent="Encounter_Player"]
visible = false
position = Vector2( -176, -40 )

[node name="Skill1" type="Position2D" parent="Encounter_Player/Skills"]
visible = false

[node name="Skill2" type="Position2D" parent="Encounter_Player/Skills"]
visible = false
position = Vector2( 42, -38 )

[node name="Skill3" type="Position2D" parent="Encounter_Player/Skills"]
visible = false
position = Vector2( 42, 42 )

[node name="Skill4" type="Position2D" parent="Encounter_Player/Skills"]
visible = false
position = Vector2( -38, -38 )

[node name="Skill5" type="Position2D" parent="Encounter_Player/Skills"]
visible = false
position = Vector2( -38, 42 )

[node name="PlayerHealth" type="ProgressBar" parent="Encounter_Player"]
visible = false
margin_left = -72.0
margin_top = -72.0
margin_bottom = -48.0
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockAmount" type="Label" parent="Encounter_Player"]
visible = false
margin_left = -32.0
margin_top = -48.0
margin_right = 8.0
margin_bottom = -34.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="Encounter_Player"]
anims/Idle = SubResource( 1 )

[node name="Encounter_Enemy" type="Node2D" parent="."]
position = Vector2( 96, 160 )
script = ExtResource( 6 )

[node name="Combat_Platform" type="Sprite" parent="Encounter_Enemy"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="EnemyControllerTween" type="Tween" parent="Encounter_Enemy"]

[node name="EnemyFilthyHand" type="Node2D" parent="Encounter_Enemy"]
visible = false
position = Vector2( 96, 128 )

[node name="EnemyHandSprite" type="Sprite" parent="Encounter_Enemy/EnemyFilthyHand"]
scale = Vector2( 0.15, 0.15 )
z_index = 2
texture = ExtResource( 9 )

[node name="HandTween" type="Tween" parent="Encounter_Enemy/EnemyFilthyHand"]

[node name="EnemySkills" type="Node2D" parent="Encounter_Enemy"]
visible = false
position = Vector2( 144, -40 )

[node name="Skill1" type="Position2D" parent="Encounter_Enemy/EnemySkills"]
visible = false

[node name="Skill2" type="Position2D" parent="Encounter_Enemy/EnemySkills"]
visible = false
position = Vector2( -38, -38 )

[node name="Skill3" type="Position2D" parent="Encounter_Enemy/EnemySkills"]
visible = false
position = Vector2( -38, 42 )

[node name="Skill4" type="Position2D" parent="Encounter_Enemy/EnemySkills"]
visible = false
position = Vector2( 42, -38 )

[node name="Skill5" type="Position2D" parent="Encounter_Enemy/EnemySkills"]
visible = false
position = Vector2( 42, 42 )

[node name="EnemyHealthBar" type="ProgressBar" parent="Encounter_Enemy"]
visible = false
margin_left = -40.0
margin_top = -72.0
margin_right = 32.0
margin_bottom = -48.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyBlockAmount" type="Label" parent="Encounter_Enemy"]
visible = false
margin_top = -48.0
margin_right = 40.0
margin_bottom = -34.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dices" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 256 )

[node name="Dice1" type="Position2D" parent="Dices"]

[node name="Dice2" type="Position2D" parent="Dices"]
position = Vector2( -32, 0 )

[node name="Dice3" type="Position2D" parent="Dices"]
position = Vector2( 32, 0 )

[node name="Dice4" type="Position2D" parent="Dices"]
position = Vector2( -64, 0 )

[node name="Dice5" type="Position2D" parent="Dices"]
position = Vector2( 64, 0 )

[node name="Dice6" type="Position2D" parent="Dices"]
position = Vector2( -96, 0 )

[node name="Dice7" type="Position2D" parent="Dices"]
position = Vector2( 96, 0 )

[node name="BackToMapButton" type="Button" parent="."]
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = 361.0
margin_bottom = 192.0
text = "YOU WON  (Click to return to map)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="RollButton" to="." method="_on_RollButton_button_up"]
[connection signal="button_up" from="EndTurnButton" to="." method="_on_EndTurnButton_button_up"]
[connection signal="enemy_died" from="Encounter_Enemy" to="." method="_on_Encounter_Enemy_enemy_died"]
[connection signal="button_up" from="BackToMapButton" to="." method="_on_BackToMapButton_button_up"]
